src/network/access/qhttpnetworkconnectionchannel_p.h
@@ -157,6 +157,7 @@ public:
 
     void init();
     void close();
+    void abort();
 
     bool sendRequest();
 
