src/network/access/qhttpnetworkreply_p.h
@@ -121,6 +121,9 @@ public:
     void setUserProvidedDownloadBuffer(char*);
     char* userProvidedDownloadBuffer();
 
+    void abort();
+
+    bool isAborted() const;
     bool isFinished() const;
 
     bool isPipeliningUsed() const;
@@ -205,7 +208,8 @@ public:
         SPDYSYNSent,
         SPDYUploading,
         SPDYHalfClosed,
-        SPDYClosed
+        SPDYClosed,
+        Aborted
     } state;
 
     QHttpNetworkRequest request;
